address intellij warnings